--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -749,10 +749,6 @@ input {
       margin-bottom: 0;
       margin-right: 10px;
 
-      &--first {
-        margin-bottom: 20px;
-      }
-
       &-area {
         cursor: pointer;
         display: flex;
@@ -767,6 +763,13 @@ input {
           &.active {
             transform: rotate(0deg);
           }
+        }
+
+        &--first {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin-bottom: 20px;
         }
       }
     }
@@ -940,6 +943,51 @@ input {
         width: 33.33%;
         margin-bottom: 15px;
         padding-right: 25px;
+      }
+    }
+
+    &__location {
+      display: flex;
+      align-items: center;
+
+      &__text {
+        margin-left: 8px;
+        font-size: 14px;
+        line-height: 120%;
+        color: #000000;
+        display: block;
+      }
+
+      &__button {
+        width: 46px;
+        height: 24px;
+        background: #C4C4C4;
+        display: flex;
+        align-items: center;
+        transition: background .2s ease;
+        padding: 1px;
+        border-radius: 100px;
+        border: none;
+
+        &:focus {
+          outline: none;
+        }
+
+        &.active {
+          background: #FCAB2D;
+
+          .search__params__location__button__toggler {
+            transform: translateX(100%);
+          }
+        }
+
+        &__toggler {
+          background: white;
+          width: 22px;
+          height: 22px;
+          border-radius: 50%;
+          transition: transform .2s ease;
+        }
       }
     }
   }
@@ -6073,6 +6121,20 @@ input {
         &--checkbox {
           width: 50%;
           padding-right: 15px;
+        }
+      }
+
+      &__title {
+        &--first {
+          margin-bottom: 10px;
+        }
+
+        &-area {
+          &--first {
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+          }
         }
       }
     }
