--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -586,14 +586,21 @@ input {
 
 .search {
   position: fixed;
+  top: 17px;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 102;
   width: 60%;
   min-width: 240px;
-  height: 56px;
-  display: flex;
-  z-index: 100;
   max-width: 820px;
+  height: 56px;
+  margin: 0 auto;
+  display: flex;
+
+  &__bg {
+    @include bg-dark-fixed;
+    background: transparent;
+  }
 
   &__autocomplete {
     position: absolute;
@@ -705,6 +712,7 @@ input {
     width: 56px;
     border: none;
     padding: 0;
+    z-index: 1;
 
     &:focus {
       outline: none;
@@ -725,11 +733,20 @@ input {
     overflow: hidden;
     overflow-y: auto;
 
+    &__outside-area {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+    }
+
     &__inner {
       width: 100%;
       height: 100%;
       padding: 25px;
       padding-bottom: 0;
+      z-index: 1;
     }
 
     &__close {
@@ -1440,12 +1457,9 @@ input {
 
     &__search {
       position: sticky;
-      transform: none;
-      margin: 0 auto;
-      left: 0;
-      top: 17px;
       margin-bottom: 130px;
-      z-index: 100;
+      transform: none;
+      left: 0;
     }
   }
 
@@ -1993,6 +2007,7 @@ input {
     color: #4a4a4a;
     font-size: 16px;
     line-height: 170%;
+    max-width: 610px;
   }
 }
 
@@ -3613,7 +3628,9 @@ input {
     width: 100%;
     height: 180px;
     object-fit: cover;
-    transition: transform 0.2s ease;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0) scale(1.0, 1.0);
+    transition: transform 0.4s ease;
 
     &.tall {
       height: 300px;
@@ -3713,7 +3730,7 @@ input {
   }
 
   &__temp {
-    color: #fcab2d;
+    color: #FF8C00;
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
@@ -4537,7 +4554,7 @@ input {
         position: relative;
 
         .swiper-slide {
-          border: 2px solid transparent;
+          border: 4px solid transparent;
           border-radius: 12px;
           overflow: hidden;
           cursor: pointer;
@@ -6317,10 +6334,10 @@ input {
   }
 
   .search {
-    width: 45%;
-    min-width: 320px;
-    height: 42px;
     top: 10px;
+    width: 45%;
+    min-width: 280px;
+    height: 42px;
 
     &__autocomplete {
       top: 44px;
@@ -6499,45 +6516,6 @@ input {
   }
 
   .main-page {
-    &__welcome {
-      &__search {
-        position: relative;
-        width: 70%;
-        min-height: 56px;
-        top: -10px;
-        z-index: 10;
-
-        .search {
-          &__bar {
-            &__input {
-              font-size: 18px;
-              line-height: 22px;
-            }
-          }
-
-          &__options {
-            min-width: 56px;
-            width: 56px;
-          }
-
-          &__params {
-            max-height: unset;
-
-            &__apply {
-              width: auto;
-            }
-
-            &__part {
-              &--checkbox {
-                width: 50%;
-                padding-right: 15px;
-              }
-            }
-          }
-        }
-      }
-    }
-
     &__beach-type {
       margin-bottom: 50px;
 
@@ -7429,12 +7407,10 @@ input {
 // making the 3 cards flex col
 @media (max-width: 650px) {
   .search {
-    width: 100%;
-    min-width: 320px;
     top: 62px;
-    left: 0px;
+    left: 0;
     transform: none;
-    transition: height 0.5s ease;
+    width: 100%;
 
     .dark-bg-inner {
       background: rgba(0, 0, 0, .5);
@@ -7486,32 +7462,10 @@ input {
   .main-page {
     &__welcome {
       &__search {
-        height: 42px;
-        min-height: 42px;
-        top: -10px;
-        overflow: visible;
-        padding: 0 20px;
-
-        &:after {
-          display: none;
-        }
-
-        .search {
-          &__options {
-            width: 42px;
-            min-width: 42px;
-          }
-
-          &__params {
-            width: unset;
-            top: 0;
-            overflow: hidden;
-
-            &__close {
-              display: none;
-            }
-          }
-        }
+        position: relative;
+        top: 0;
+        z-index: 99;
+        width: 80%;
       }
     }
 
@@ -8236,34 +8190,6 @@ input {
       &__title {
         font-size: 18px;
         line-height: 100%;
-      }
-
-      &__search {
-        margin-bottom: 0;
-
-        .search {
-          &__params {
-            &__part {
-              &__dropdowns {
-                flex-direction: column;
-                margin-bottom: 0;
-              }
-
-              &--dropdown {
-                margin-bottom: 20px;
-              }
-
-              &--checkbox {
-                padding-right: 0;
-                width: 100%;
-              }
-
-              &__label {
-                display: block;
-              }
-            }
-          }
-        }
       }
     }
 
