--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1134,7 +1134,7 @@ input {
 .banner {
   &__card {
     width: 100%;
-    height: 400px;
+    min-height: 400px;
     border-radius: 12px;
     position: relative;
     display: flex;
@@ -1163,6 +1163,9 @@ input {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
 
         &-area {
           position: relative;
@@ -1507,6 +1510,14 @@ input {
   &__beach-events {
     margin-top: 60px;
     margin-bottom: 40px;
+
+    .slider {
+      &__arrow {
+        &-left, &-right {
+          top: 90px;
+        }
+      }
+    }
   }
 
   &__choose-beach {
@@ -4195,7 +4206,9 @@ input {
         height: 100%;
         object-fit: cover;
         border-radius: 12px;
-        transition: transform 0.2s ease;
+        -webkit-backface-visibility: hidden;
+        -webkit-transform: translateZ(0) scale(1.0, 1.0);
+        transition: transform 0.3s ease;
         transform-origin: center;
       }
 
