--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1442,7 +1442,7 @@ input {
     }
 
     &__pretitle {
-      color: #fcab2d;
+      color: #FFFFFF;
       letter-spacing: 0.06em;
       text-transform: uppercase;
       font-size: 16px;
@@ -2972,7 +2972,7 @@ input {
         margin-bottom: 10px;
       }
     }
-    
+
     &__right {
       &__button {
         margin-bottom: 10px;
@@ -3381,7 +3381,7 @@ input {
       &__nickname-wrapper {
         display: -webkit-box;
         -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;  
+        -webkit-box-orient: vertical;
         overflow: hidden;
       }
 
@@ -3411,7 +3411,7 @@ input {
       color: #73767d;
       display: -webkit-box;
       -webkit-line-clamp: 3;
-      -webkit-box-orient: vertical;  
+      -webkit-box-orient: vertical;
       overflow: hidden;
     }
 
@@ -6441,7 +6441,7 @@ input {
           padding-left: 32px;
         }
       }
-      
+
       &__card {
         &:hover,
         &.active {
