--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,3 +1,5 @@
+$main_span_btn_color: #228596;
+$classic-span-font-size: 16px;
 @font-face {
   font-family: Museo Sans Cyrl;
   font-weight: 100;
@@ -81,7 +83,7 @@ input {
 
 @mixin see-all {
   text-decoration: none;
-  color: #fcab2d;
+  color: #228596;
   font-size: 16px;
   font-weight: 300;
   line-height: 130%;
@@ -500,8 +502,8 @@ input {
     }
   }
 
-  .ps__rail-y:hover>.ps__thumb-y,
-  .ps__rail-y:focus>.ps__thumb-y,
+  .ps__rail-y:hover > .ps__thumb-y,
+  .ps__rail-y:focus > .ps__thumb-y,
   .ps__rail-y.ps--clicking .ps__thumb-y {
     background: #fcab2d;
   }
@@ -1160,93 +1162,93 @@ input {
     }
 
     &__pic {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      &-area {
+        position: relative;
         width: 100%;
-        height: 100%;
-        object-fit: cover;
-        position: absolute;
-        top: 0;
-        left: 0;
+        border-radius: 12px 0 0 12px;
+        overflow: hidden;
 
-        &-area {
-          position: relative;
+        &__bottom-gradient {
+          position: absolute;
+          bottom: 0;
+          left: 0;
           width: 100%;
-          border-radius: 12px 0 0 12px;
-          overflow: hidden;
+          height: 150px;
+          background: linear-gradient(180deg, rgba(30, 44, 55, 0) 0%, #1E2C37 100%);
+        }
 
-          &__bottom-gradient {
+        &__pretitle {
+          position: absolute;
+          top: -5px;
+          right: 0;
+          margin-bottom: 0;
+          font-size: 12px;
+          font-weight: 500;
+          line-height: 130%;
+          color: #393e48;
+          margin-right: 5px;
+        }
+
+        &__title {
+          font-size: 48px;
+          font-weight: 900;
+          line-height: 110%;
+          color: #ffffff;
+          margin-bottom: 0;
+
+          &-area {
             position: absolute;
-            bottom: 0;
-            left: 0;
+            top: 50px;
+            right: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+          }
+        }
+
+        &__icon {
+          margin-bottom: 10px;
+          width: 60px;
+          height: 60px;
+          object-fit: contain;
+
+          &-area {
+            @include flex-center;
             width: 100%;
-            height: 150px;
-            background: linear-gradient(180deg, rgba(30, 44, 55, 0)  0%, #1E2C37  100%);
-          }
-
-          &__pretitle {
+            padding: 0 50px;
             position: absolute;
-            top: -5px;
-            right: 0;
-            margin-bottom: 0;
-            font-size: 12px;
-            font-weight: 500;
-            line-height: 130%;
-            color: #393e48;
-            margin-right: 5px;
+            left: 0;
+            bottom: 30px;
+            z-index: 1;
           }
 
-          &__title {
-            font-size: 48px;
-            font-weight: 900;
-            line-height: 110%;
-            color: #ffffff;
-            margin-bottom: 0;
+          &-wrapper {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            margin-right: 45px;
 
-            &-area {
-              position: absolute;
-              top: 50px;
-              right: 50px;
-              display: flex;
-              flex-direction: column;
-              justify-content: flex-end;
-            }
-          }
-
-          &__icon {
-            margin-bottom: 10px;
-            width: 60px;
-            height: 60px;
-            object-fit: contain;
-
-            &-area {
-              @include flex-center;
-              width: 100%;
-              padding: 0 50px;
-              position: absolute;
-              left: 0;
-              bottom: 30px;
-              z-index: 1;
+            &:last-of-type {
+              margin-right: 0;
             }
 
-            &-wrapper {
-              display: flex;
-              align-items: center;
-              flex-direction: column;
-              margin-right: 45px;
-
-              &:last-of-type {
-                margin-right: 0;
-              }
-
-              span {
-                font-size: 12px;
-                line-height: 130%;
-                color: #ffffff;
-                text-align: center;
-                white-space: nowrap;
-              }
+            span {
+              font-size: 12px;
+              line-height: 130%;
+              color: #ffffff;
+              text-align: center;
+              white-space: nowrap;
             }
           }
         }
+      }
     }
 
     &__info-area {
@@ -1281,7 +1283,7 @@ input {
 
         span {
           font-weight: 500;
-          font-size: 14px;
+          font-size: 16px;
           line-height: 130%;
           color: #ffffff;
           margin-right: 8px;
@@ -1472,6 +1474,7 @@ input {
 
     &__see-all-bottom {
       display: none;
+      color: #228596 !important;
 
       a {
         @include see-all;
@@ -2657,7 +2660,7 @@ input {
     }
 
     &__opinion {
-      background: #fcab2d;
+      background: #228596;
       border-radius: 20px;
       width: 100%;
       padding: 30px 48px;
@@ -2679,7 +2682,7 @@ input {
         font-size: 16px;
         font-weight: 300;
         line-height: 150%;
-        text-align: center;
+        text-align: left;
       }
     }
   }
@@ -3281,7 +3284,7 @@ input {
         top: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0,0,0,0.5);
+        background: rgba(0, 0, 0, 0.5);
       }
 
       &__card {
@@ -5194,7 +5197,7 @@ input {
     }
 
     .main-page__map {
-      min-width: calc((100vw - 1440px)*.5 + 656px + 74px - 29px);
+      min-width: calc((100vw - 1440px) * .5 + 656px + 74px - 29px);
     }
   }
 }
@@ -6804,6 +6807,7 @@ input {
           justify-content: space-between;
           align-items: center;
           margin-bottom: 30px;
+
           a.beach-page__events__see-all {
             display: flex;
             padding-left: 20px;
@@ -8218,7 +8222,7 @@ input {
 
         a {
           text-decoration: none;
-          color: #fcab2d;
+          color: #228596;
           font-size: 16px;
           line-height: 130%;
         }
@@ -8239,7 +8243,7 @@ input {
 
         a {
           text-decoration: none;
-          color: #fcab2d;
+          color: #228596;
           font-size: 16px;
           line-height: 130%;
         }
@@ -8792,8 +8796,34 @@ input {
 }
 
 // at 400px
-// making the footer fully mobile
+// making the footer and a slider fully mobile
 @media (max-width: 400px) {
+  .opinion-mobile {
+    display: flex;
+    flex-direction: row;
+    margin-left: 5px;
+
+    span {
+      margin-left: 20px;
+    }
+  }
+  .m-side-opinion {
+    margin-left: 15px !important;
+  }
+  .beach-event__review__title-area {
+    margin-top: -20px;
+  }
+  .beach-event__review{
+    &__title, &__date{
+      text-align: left !important;
+      margin-left: 45px;
+    }
+    &__title-area__rating{
+      margin-left: 45px;
+      justify-content: flex-start !important;
+    }
+  }
+
   .footer {
     &__left {
       flex-direction: column;
@@ -9003,13 +9033,10 @@ input {
         }
       }
 
-      &__comment {
-        text-align: center;
-      }
 
       &__pic {
-        top: 0;
-        left: 50%;
+        top: 40px;
+        left: 20px;
         transform: translate(-50%, -50%);
       }
     }
@@ -9255,7 +9282,7 @@ body.touch {
 
   .main-page {
     &__see-all {
-      color: #fcab2d !important;
+      color: #228596 !important;
 
       &:after {
         background: url("../../static/pics/global/svg/arrow_next_orange.svg") no-repeat !important;
@@ -9325,31 +9352,39 @@ body.touch {
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-  html*.custom-card__beach {
+  html *.custom-card__beach {
     margin-bottom: 4px;
   }
 }
 
 .bounce-enter-active {
-    animation: bounce-in 0.5s;
+  animation: bounce-in 0.5s;
 }
-.bounce-leave-active {
-    animation: bounce-in 0.5s reverse;
-}
-@keyframes bounce-in {
-    0% {
-        transform: scale(0);
-        height: 10px;
-    }
 
-    50% {
-        transform: scale(1.5);
-        height: 60px;
-    }
-    100% {
-        transform: scale(1);
-    }
+.bounce-leave-active {
+  animation: bounce-in 0.5s reverse;
 }
+
+@keyframes bounce-in {
+  0% {
+    transform: scale(0);
+    height: 10px;
+  }
+
+  50% {
+    transform: scale(1.5);
+    height: 60px;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.mlr-35 {
+  margin-left: 35px;
+  margin-right: 35px;
+}
+
 // .fade-enter-active,
 // .fade-leave-active {
 //     transition: opacity 1.5s;
@@ -9360,4 +9395,22 @@ body.touch {
 
 .btn-ymaps {
   display: none;
+}
+
+.span-color-overload {
+  color: $main_span_btn_color !important;
+}
+
+.span-16-px {
+  font-size: $classic-span-font-size !important;
+}
+
+.m-side-opinion {
+  margin-left: 35px;
+  margin-right: 35px;
+}
+
+
+.m-t-35 {
+  margin-top: 35px;
 }
