--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,4 +1,5 @@
 @import "helpers";
+@import "modals/3d.scss";
 
 @font-face {
   font-family: Museo Sans Cyrl;
@@ -3335,6 +3336,17 @@ input {
         color: #F94A50;
         margin-top: 5px;
       }
+
+      &__3d {
+        position: relative;
+        z-index: 1;
+        min-width: 300px;
+        max-width: 300px;
+        min-height: 100px;
+        background: white;
+        padding: 30px;
+        border-radius: 12px;
+      }
     }
 
     &__slider {
@@ -3733,7 +3745,8 @@ input {
           color: #228596;
         }
       }
-      .distance{
+
+      .distance {
         position: absolute;
         right: 0;
         top: 0;
@@ -4419,6 +4432,14 @@ input {
         box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
         border-radius: 50%;
       }
+    }
+
+    &__3d-as-360 {
+      position: absolute;
+      top: 18px;
+      cursor: pointer;
+      right: 10px;
+      z-index: 2;
     }
 
     &__zoom-button {
@@ -6667,6 +6688,11 @@ input {
     &-beach-event {
       margin-top: 31px;
 
+      &__3d-as-360 {
+        top: 10px;
+        right: 0px;
+      }
+
       &__medal {
         &-gold,
         &-blue {
@@ -8823,12 +8849,13 @@ input {
   .beach-event__review__title-area {
     margin-top: -20px;
   }
-  .beach-event__review{
-    &__title, &__date{
+  .beach-event__review {
+    &__title, &__date {
       text-align: left !important;
       margin-left: 45px;
     }
-    &__title-area__rating{
+
+    &__title-area__rating {
       margin-left: 45px;
       justify-content: flex-start !important;
     }
