--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -4394,7 +4394,57 @@ input {
       }
     }
 
-    &__medal {
+    &__blue{
+      position: absolute;
+      top: 20px;
+      right: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: stretch;
+      z-index: 2;
+    }
+
+    &__sun {
+      position: absolute;
+      left: 80px;
+      top: 20px;
+      display: flex;
+      justify-content: stretch;
+      z-index: 2;
+
+      &-item {
+
+        &__tooltip {
+          display: none;
+          position: absolute;
+          bottom: -35px;
+          padding: 5px;
+          border-radius: 6px;
+          white-space: nowrap;
+          background: white;
+
+          &:after {
+            content: "";
+            position: absolute;
+            display: block;
+            left: 25px;
+            transform: translateX(-50%);
+            width: 10px;
+            height: 7px;
+            top: -7px;
+            background: url("../../static/pics/global/svg/popup_top.svg");
+          }
+        }
+
+        &:hover {
+          .slider-beach-event__sun-item__tooltip {
+            display: block;
+          }
+        }
+      }
+    }
+
+    &__medal, &__sun {
       &-blue {
         right: 20px;
       }
@@ -4443,13 +4493,6 @@ input {
       }
     }
 
-    &__3d-as-360 {
-      position: absolute;
-      top: 18px;
-      cursor: pointer;
-      right: 10px;
-      z-index: 2;
-    }
 
     &__zoom-button {
       background: none;
@@ -6705,9 +6748,13 @@ input {
     &-beach-event {
       margin-top: 31px;
 
-      &__3d-as-360 {
+      &__sun {
         top: 10px;
-        right: 0px;
+        left: 70px;
+      }
+      &__blue{
+        top: 10px;
+        right: 10px;
       }
 
       &__medal {
@@ -8132,6 +8179,10 @@ input {
         }
       }
 
+      &__sun {
+        top: 7px;
+      }
+
       &__medal {
         &-gold,
         &-blue {
@@ -9197,9 +9248,20 @@ input {
         padding: 10px;
       }
 
+      &__sun {
+        left: 55px;
+
+        &-item {
+          img {
+            width: 50px;
+            height: 50px;
+          }
+        }
+      }
+
       &__medal-gold,
       &__medal-blue,
-      &__zoom-button {
+      &__zoom-button, &__blue {
         img {
           width: 40px;
           height: 40px;
