#14094 [update] a beach's form: a video from youtube is possible

--- a/assets/scss/helpers.scss
+++ b/assets/scss/helpers.scss
@@ -20,6 +20,12 @@ $classic-span-font-size: 16px;
 .pointer-events-none {
   pointer-events: none;
 }
-.distance-show{
 
+.play-back {
+  opacity: .5;
+  background: white;
 }
+.my-flex{
+  display: flex;
+}
+
