--- a/assets/scss/modals/geoModal.scss
+++ b/assets/scss/modals/geoModal.scss
@@ -113,6 +113,7 @@
           .big {
             width: 86px;
             height: 40px;
+            border-radius: 20px;
           }
 
         }
