--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -3759,6 +3759,7 @@ input {
       .distance {
         position: absolute;
         right: 0;
+        background-color: rgba(0, 0, 0, 0);
         top: 0;
         ont-weight: 500;
         font-size: 14px;
@@ -4317,6 +4318,7 @@ input {
         object-fit: cover;
         border-radius: 12px;
       }
+
       .y-block {
         width: 100%;
         height: 100%;
@@ -9545,8 +9547,10 @@ body.touch {
 .distance {
   margin-bottom: 15px;
   padding: 19px 37px;
-  background: white;
+  background: rgba(0, 0, 0, 0);;
   border-radius: 12px;
+  margin: 0;
+  padding: 0;
 
   p {
     font-style: normal;
@@ -9562,4 +9566,31 @@ body.touch {
 
   }
 
+}
+
+//mobile
+.mobile-distance{
+  display: none;
+}
+@media (max-width: 400px) {
+  .mobile-distance {
+    display: block;
+    margin: 0 auto;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10000;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: #73767D;
+    text-align: center;
+    border-radius: 20px;
+  }
+  .fat-title, .distance{
+    display: none;
+  }
 }
