--- a/assets/scss/modals/geoModal.scss
+++ b/assets/scss/modals/geoModal.scss
@@ -1,5 +1,5 @@
 .modal-geo {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
@@ -30,6 +30,7 @@
       background: white;
       box-shadow: 10px 4px 20px rgba(70, 101, 93, 0.3);
       z-index: 1;
+      width: auto;
       min-width: 1070px;
       min-height: 800px;
       padding: 28px 0;
@@ -76,7 +77,7 @@
             color: white;
           }
 
-         &__radius {
+          &__radius {
             font-family: Museo Sans Cyrl;
             font-style: normal;
             font-weight: normal;
@@ -87,22 +88,28 @@
             margin-left: 50px;
           }
 
-          &__circle {
-            background: #FFFFFF;
-            border: 1px solid #FF8C00;
-            border-radius: 50%;
+          &__circles {
             display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 8px;
-            cursor: pointer;
-            font-weight: 500;
-            font-size: 14px;
-            line-height: 120%;
-            /* identical to box height, or 17px */
+            justify-content: space-between;
+            margin-left: 5px;
 
-            color: #4D515A;
+            &__circle {
+              background: #FFFFFF;
+              border: 1px solid #FF8C00;
+              border-radius: 50%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              margin: 0 8px;
+              cursor: pointer;
+              font-weight: 500;
+              font-size: 14px;
+              line-height: 120%;
+              /* identical to box height, or 17px */
 
+              color: #4D515A;
+
+            }
           }
 
           .small {
@@ -170,18 +177,97 @@
       }
 
       &__cross {
-        font-size: 50px;
+        font-size: 18px;
         position: absolute;
-        top: 0;
+        top: 10px;
+        font-weight: bold;
         right: 10px;
-        color: #9ea2ad;
+        color: #228596;
         cursor: pointer;
-      }
-
-      iframe {
-        width: 100%;
-        height: 100%;
+        display: none;
       }
     }
+  }
+}
+
+@media (max-width: 1024px) {
+  .modal-geo {
+    &__modal {
+      &__body {
+        min-width: 100vw;
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .modal-geo__modal__body__bottom__right__accept {
+    min-width: 148px;
+  }
+  .modal-geo__modal__body__bottom__right {
+    margin-right: 5px;
+  }
+  .modal-geo__modal__body__bottom__left__radius {
+    margin-left: 5px;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .modal-geo__modal__body__bottom__left .small {
+    width: 36px;
+    height: 36px;
+  }
+}
+//mobile
+@media (max-width: 414px) {
+
+  .modal-geo__modal__body {
+    padding: 0;
+    min-height: 0;
+    height: 100%;
+    &__top {
+      justify-content: center;
+      p {
+        margin: 0;
+      }
+    }
+
+  }
+  .modal-geo__modal__body__bottom {
+    flex-direction: column;
+    margin-top: 10px;
+  }
+  .modal-geo__modal__body__cross {
+    display: block;
+  }
+  .modal-geo__modal__body__bottom__left .small {
+    width: 40px;
+    height: 40px;
+  }
+  .modal-geo__modal__body__bottom__right__clean {
+    display: none;
+  }
+  #map-modal {
+    height: 70vh !important;
+    width: 100vw !important;
+    min-height: 0 !important;
+  }
+  .modal-geo__modal__body__bottom__left {
+    flex-direction: column;
+  }
+  .modal-geo__modal__body__bottom__right__accept {
+    margin-top: 13px;
+  }
+  .modal-geo__modal__body__bottom__left__circles {
+    width: 100%;
+  }
+}
+
+@media (max-width: 320px) {
+  #map-modal {
+    height: 64vh !important;
+    width: 100vw !important;
+    min-height: 0 !important;
   }
 }
