--- a/assets/scss/modals/geoModal.scss
+++ b/assets/scss/modals/geoModal.scss
@@ -270,4 +270,8 @@
     width: 100vw !important;
     min-height: 0 !important;
   }
+  .modal-geo__modal__body__bottom__left .small{
+    width: 37.33px;
+    height: 37.33px;
+  }
 }
