#14124 [new/update/fix]  the search page: iphone 5 dragend modal and h1

--- a/assets/scss/helpers.scss
+++ b/assets/scss/helpers.scss
@@ -27,4 +27,11 @@ $classic-span-font-size: 16px;
 .my-flex{
   display: flex;
 }
+.main-beach-h2-helper{
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 900;
+  line-height: 120%;
+  color: #393e48;
+}
 
