--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -4425,7 +4425,7 @@ input {
         &__tooltip {
           display: none;
           position: absolute;
-          bottom: -35px;
+          bottom: -25px;
           padding: 5px;
           border-radius: 6px;
           white-space: nowrap;
@@ -5562,7 +5562,7 @@ input {
   .distance-right {
     display: none;
   }
-  .distance-right-mobile{
+  .distance-right-mobile {
     display: block !important;
   }
   .search-page {
@@ -9584,7 +9584,8 @@ body.touch {
 .mobile-distance {
   display: none;
 }
-.distance-right-mobile{
+
+.distance-right-mobile {
   display: none;
   background: #ffffff;
   border-radius: 12px;
@@ -9592,6 +9593,7 @@ body.touch {
   width: 100%;
   margin-bottom: 14px;
 }
+
 @media (max-width: 400px) {
   .mobile-distance {
     display: block;
@@ -9612,5 +9614,44 @@ body.touch {
   }
   .fat-title, .distance {
     display: none;
+  }
+}
+
+
+.bem-is-a-dead-methodology {
+  position: relative;
+  &:hover {
+    .right-tooltip {
+      display: block;
+    }
+  }
+}
+
+.right-tooltip {
+  position: absolute;
+  display: none;
+  top: 60px;
+  left: 50%;
+  min-width: 110px;
+  transform: translateX(-50%);
+  background: white;
+  font-size: 16px;
+  line-height: 18px;
+  border-radius: 12px;
+  max-width: 320px;
+  z-index: 1;
+  padding: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+
+  &:after {
+    content: "";
+    position: absolute;
+    display: block;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 10px;
+    height: 7px;
+    top: -7px;
+    background: url("../../static/pics/global/svg/popup_top.svg");
   }
 }
