--- a/assets/scss/modals/geoModal.scss
+++ b/assets/scss/modals/geoModal.scss
@@ -1,9 +1,10 @@
 .modal-geo {
   position: absolute;
   width: 100%;
-  height: 100%;
+  right: 0;
   top: 0;
   left: 0;
+  bottom: 0;
   display: -webkit-box;
   display: flex;
   -webkit-box-pack: center;
