--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -388,7 +388,7 @@ input {
     margin-bottom: 30px;
     font-size: 48px;
     font-weight: 900;
-    line-height: 90%;
+    line-height: 100%;
   }
 
   &__description {
@@ -2913,6 +2913,7 @@ input {
         font-size: 16px;
         line-height: 170%;
         color: #393e48;
+        word-wrap: break-word;
       }
     }
   }
@@ -5610,7 +5611,7 @@ input {
 
     &__title {
       font-size: 32px;
-      line-height: 110%;
+      line-height: 100%;
     }
 
     &__description {
@@ -8069,7 +8070,7 @@ input {
 
     &__title {
       font-size: 36px;
-      line-height: 90%;
+      line-height: 100%;
     }
 
     &__description {
