--- a/assets/scss/modals/geoModal.scss
+++ b/assets/scss/modals/geoModal.scss
@@ -210,6 +210,7 @@
   }
   .modal-geo__modal__body__bottom__left__radius {
     margin-left: 5px;
+    margin-bottom: 5px;
   }
 }
 
@@ -220,6 +221,7 @@
     height: 36px;
   }
 }
+
 //mobile
 @media (max-width: 414px) {
 
@@ -227,10 +229,12 @@
     padding: 0;
     min-height: 0;
     height: 100%;
+
     &__top {
       justify-content: center;
+
       p {
-        margin: 0;
+        margin: 5px 0 5px 0 !important;
       }
     }
 
@@ -271,7 +275,7 @@
     width: 100vw !important;
     min-height: 0 !important;
   }
-  .modal-geo__modal__body__bottom__left .small{
+  .modal-geo__modal__body__bottom__left .small {
     width: 37.33px;
     height: 37.33px;
   }
