--- a/assets/scss/modals/geoModal.scss
+++ b/assets/scss/modals/geoModal.scss
@@ -140,8 +140,8 @@
           }
 
           &__accept {
-            border: 2px solid #fcab2d;
-            background: #fcab2d;
+            border: 2px solid #FF8C00;
+            background: #FF8C00;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             padding: 14px 34px;
@@ -157,7 +157,7 @@
 
             &:hover {
               background: white;
-              color: #fcab2d;
+              color: #FF8C00;
               border-color: #228596;
             }
 
