--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -137,12 +137,12 @@ input {
 }
 
 .orange {
-  color: #fcab2d !important;
+  color: #FF8C00 !important;
 }
 
 .bg {
   &-orange {
-    background-color: #fcab2d !important;
+    background-color: #FF8C00 !important;
   }
 
   &-blue {
@@ -205,8 +205,8 @@ input {
     margin-right: 10px;
 
     &.checked {
-      background: #fcab2d;
-      border: 1px solid #fcab2d;
+      background: #FF8C00;
+      border: 1px solid #FF8C00;
     }
 
     img {
@@ -493,7 +493,7 @@ input {
 
 .scroll-area {
   .ps__thumb-y {
-    background: #fcab2d;
+    background: #FF8C00;
   }
 
   .ps__rail-y {
@@ -508,7 +508,7 @@ input {
   .ps__rail-y:hover > .ps__thumb-y,
   .ps__rail-y:focus > .ps__thumb-y,
   .ps__rail-y.ps--clicking .ps__thumb-y {
-    background: #fcab2d;
+    background: #FF8C00;
   }
 }
 
@@ -559,7 +559,7 @@ input {
       position: absolute;
       right: -23px;
       top: -10px;
-      background: #fcab2d;
+      background: #FF8C00;
       border-radius: 50px;
       height: 20px;
       padding: 0 6px;
@@ -574,7 +574,7 @@ input {
       transition: color 0.2s ease;
 
       &:hover {
-        color: #fcab2d;
+        color: #FF8C00;
       }
     }
 
@@ -803,19 +803,19 @@ input {
 
     &__apply {
       @include flex-center;
-      background: #fcab2d;
+      background: #FF8C00;
       box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
       border-radius: 6px;
       padding: 16px 62px;
       font-size: 14px;
       line-height: 130%;
-      border: 2px solid #fcab2d;
+      border: 2px solid #FF8C00;
       color: #ffffff;
       transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
 
       &:hover {
         background: white;
-        color: #fcab2d;
+        color: #FF8C00;
         border-color: #228596;
       }
 
@@ -996,7 +996,7 @@ input {
         }
 
         &.active {
-          background: #FCAB2D;
+          background: #FF8C00;
 
           .search__params__location__button__toggler {
             transform: translateX(100%);
@@ -1276,8 +1276,8 @@ input {
       }
 
       &__button {
-        border: 2px solid #fcab2d;
-        background: #fcab2d;
+        border: 2px solid #FF8C00;
+        background: #FF8C00;
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
         border-radius: 8px;
         padding: 14px 34px;
@@ -1308,7 +1308,7 @@ input {
 
         &.border-orange {
           &:hover {
-            border-color: #fcab2d;
+            border-color: #FF8C00;
           }
         }
 
@@ -1317,7 +1317,7 @@ input {
           border-color: #228596;
 
           span {
-            color: #fcab2d;
+            color: #FF8C00;
           }
 
           &:after {
@@ -1363,7 +1363,7 @@ input {
 
           &__button {
             &:hover {
-              border-color: #fcab2d;
+              border-color: #FF8C00;
             }
           }
         }
@@ -1730,7 +1730,7 @@ input {
           font-size: 24px;
           font-weight: 700;
           line-height: 100%;
-          color: #fcab2d;
+          color: #FF8C00;
           margin-right: 4px;
 
           &-area {
@@ -1757,7 +1757,7 @@ input {
             }
 
             &:hover {
-              color: #fcab2d !important;
+              color: #FF8C00 !important;
             }
 
             img {
@@ -1869,7 +1869,7 @@ input {
       }
 
       &.active {
-        border: 2px solid #fcab2d;
+        border: 2px solid #FF8C00;
       }
 
       &s {
@@ -1929,7 +1929,7 @@ input {
       &:hover,
       &.active {
         box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
-        border-color: #fcab2d;
+        border-color: #FF8C00;
       }
 
       &__pic-area {
@@ -2068,7 +2068,7 @@ input {
     }
 
     &.active {
-      background: #fcab2d;
+      background: #FF8C00;
       color: white;
       opacity: 1 !important;
       cursor: default;
@@ -2836,7 +2836,7 @@ input {
       transition: border-color 0.2s ease;
 
       &:hover {
-        border-color: #fcab2d;
+        border-color: #FF8C00;
       }
 
       &:focus {
@@ -2965,7 +2965,7 @@ input {
       padding: 0;
 
       &.active {
-        border-bottom: 6px solid #fcab2d;
+        border-bottom: 6px solid #FF8C00;
       }
 
       &:focus {
@@ -3647,7 +3647,7 @@ input {
       min-height: 18px;
       max-width: 18px;
       max-height: 18px;
-      border: 2px solid #fcab2d;
+      border: 2px solid #FF8C00;
       @include flex-center;
     }
 
@@ -3980,7 +3980,7 @@ input {
           font-size: 24px;
           font-weight: 700;
           line-height: 120%;
-          color: #fcab2d;
+          color: #FF8C00;
           margin-right: 4px;
         }
       }
@@ -4042,7 +4042,7 @@ input {
       }
 
       &.active {
-        background: #fcab2d;
+        background: #FF8C00;
         color: white;
         border-radius: 33px;
       }
@@ -4126,7 +4126,7 @@ input {
 
       &__temp {
         &-number {
-          color: #fcab2d;
+          color: #FF8C00;
           white-space: nowrap;
         }
 
@@ -4270,7 +4270,7 @@ input {
           font-size: 24px;
           font-weight: 700;
           line-height: 120%;
-          color: #fcab2d;
+          color: #FF8C00;
           margin-right: 4px;
 
           &-area {
@@ -4777,7 +4777,7 @@ input {
   z-index: 2 !important;
 
   &-bullet {
-    background: #fcab2d !important;
+    background: #FF8C00 !important;
     width: 4px !important;
     height: 4px !important;
     opacity: 0.5 !important;
@@ -5161,7 +5161,7 @@ input {
     &-orange {
       width: 50px;
       height: 50px;
-      background: #fcab2d;
+      background: #FF8C00;
       box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
       border-radius: 50%;
       @include flex-center;
@@ -9464,8 +9464,8 @@ body.touch {
     &__card {
       &__info-area {
         &__button {
-          border-color: #fcab2d !important;
-          background: #fcab2d !important;
+          border-color: #FF8C00 !important;
+          background: #FF8C00 !important;
 
           span {
             color: white !important;
@@ -9482,7 +9482,7 @@ body.touch {
   .search {
     &__params {
       &__apply {
-        background: #fcab2d !important;
+        background: #FF8C00 !important;
         color: white !important;
       }
     }
@@ -9496,7 +9496,7 @@ body.touch {
 
         &.active {
           box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1) !important;
-          border-color: #fcab2d !important;
+          border-color: #FF8C00 !important;
         }
       }
     }
