fixed sections, fixed about for beaches and events, changed some code for similar beaches and added some code for beach-catalog

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -3064,6 +3064,7 @@ input {
       font-weight: 700;
       line-height: 24px;
       color: #393e48;
+      word-break: break-word;
 
       &-area {
         display: flex;
