#14122 [new] a form beach: bar's distance

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -292,7 +292,7 @@ input {
     padding: 5px 0;
     max-height: 200px;
     overflow-y: auto;
-    -webkit-transform: translate3d(0,100%,0);
+    -webkit-transform: translate3d(0, 100%, 0);
     -webkit-overflow-scrolling: touch;
 
     &__item {
@@ -9631,4 +9631,12 @@ body.touch {
     top: -7px;
     background: url("../../static/pics/global/svg/popup_top.svg");
   }
+}
+
+.bar-distance {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 120%;
+  text-align: right;
+  color: #73767D;
 }
