--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -4765,6 +4765,11 @@ input {
   width: 30px;
   height: 30px;
   padding: 0;
+  background: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:focus {
     outline: none;
@@ -4773,6 +4778,10 @@ input {
   img {
     width: 100%;
     height: 100%;
+  }
+
+  svg {
+    margin: auto !important;
   }
 }
 
