#14296 [fix] a pagination for horizontal and vertical align: changed

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9665,3 +9665,8 @@ body.touch {
 .slider-beach-event .swiper-slide img {
   border-radius: 0 !important;
 }
+.three-dots {
+  width: 20px !important;
+  height: 20px !important;
+  margin: 0 9px !important;
+}
