--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -6752,7 +6752,7 @@ input {
       &__card {
         &__pic-area {
           img {
-            height: auto;
+            //height: auto;
           }
         }
       }
