--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -300,7 +300,7 @@ input {
     padding: 5px 0;
     max-height: 200px;
     overflow-y: auto;
-    //-webkit-transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(0, 100%, 0);
     //-webkit-overflow-scrolling: touch;
 
     &__item {
