#280 [update]: assets, components, pages, store: add mobile modal

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -3,6 +3,7 @@
 @import "yandexMap/yandex.scss";
 @import "modals/geoModal.scss";
 @import "sliders/slider.scss";
+@import "modals/mobileSettingsModal.scss";
 
 @font-face {
   font-family: Museo Sans Cyrl;
